2006-06-30  Hans Rakers <hans at parse dot nl>

	* Added ability to sort table columns by clicking on the table
	  headings in the control panel
	* Quick & dirty fix for eaccelerator_clear to work with the new
	  cache dir hashing. This still needs to be done for win32.

	  eaccelerator_clean still needs some fixing to work with the
	  dir hashing.

2006-06-27  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fixed ifdef for #108 to use only on windows
        * Fix for bug #109, #31 and SF-1102070
        * Cleaned-up RINIT a bit for hostname determining
        * Included the fix from ticket #94 for zts

2006-06-26  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Fix ticket #108
        * Removed webui.[c|h] from the windows project files

2006-06-06  Hans Rakers <hans at parse dot nl>

        * Fix for ticket #101 ('bailout' is used in zend_globals.h in a ZTS
          build) as suggested by <ihanick at gmail dot com>

2006-06-02  Hans Rakers <hans at parse dot nl>

        * Removed two unused vars from the internal datastructures
        * Fixed constructor inheritance. This fixes handling of implicit
          constructors and solves ticket #89

2006-05-14  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Forgot to remove some debug messages for the filter bug.

2006-05-08  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Make the disassembler do openbasedir checks before showing a file, 
          this fixes bug #59
        * Changed the filter logic a bit, this fixes bug #72

2006-05-07  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>

        * Added directory hashing for md5 and inode based keys based on a patch
          from <mattias at efterfesten.com>, default is 2 levels deep.
        * Renamed some left over MM based names to EA.
        * Increased default hash size for user and script to 512 for extra 
          performance.

2006-05-04  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
