@@ -1,3 +1,10 @@
+2006-06-30  Bart Vanbrabant <bart.vanbrabant at zoeloelip.be>
+
+        * Cleaned up the checking for other incompatible extensions a 
+          bit. This should fix the use of IonCube with eAccelerator. I did 
+          some test loading IonCube in different ways and never got in to 
+          trouble. This fixes ticket #66.
+
 2006-06-30  Hans Rakers <hans at parse dot nl>
 
 	* Added ability to sort table columns by clicking on the table
